# mail-bridge

./: .env.example  .gitattributes  .gitignore  AGENTS.md  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  PUBLISHING-CHECKLIST.md  README.md  RELEASE-NOTES-TEMPLATE.md  REPO-METADATA.md  SECURITY.md  SUPPORT.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  support_request.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  CONFIGURATION.md  DEPLOYMENT.md  QUICKSTART.md  REQUIREMENTS.md  USAGE.md
docs/runbooks/: OPERATIONS.md
mail_bridge/: add_preference_note.py  add_preference_rule.py  bootstrap_oauth.py  classifier.py  config.py  gmail.py  logging_utils.py  main.py  models.py  notifier.py  openclaw_cli.py  openclaw_json_task.mjs  openclaw_qqbot_send_task.mjs  preferences.py  pubsub_subscriber.py  rules.py  send_test_message.py  service.py  store.py
scripts/: prepublish-check.ps1
tests/: test_classifier.py  test_gmail.py  test_logging_utils.py  test_openclaw_cli.py  test_preferences.py  test_pubsub.py  test_rules.py  test_store.py
