[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mail-bridge"
version = "0.1.1"
description = "Gmail push bridge for importance classification and QQ notifications"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
keywords = ["gmail", "pubsub", "email", "openclaw", "qq", "self-hosted", "fastapi"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Framework :: FastAPI",
  "Intended Audience :: End Users/Desktop",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "Topic :: Communications :: Email",
  "Topic :: Internet",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "fastapi>=0.115.0",
  "google-api-python-client>=2.170.0",
  "google-auth>=2.39.0",
  "google-auth-httplib2>=0.2.0",
  "google-auth-oauthlib>=1.2.2",
  "google-cloud-pubsub>=2.29.0",
  "httpx>=0.28.0",
  "pydantic-settings>=2.8.0",
  "uvicorn[standard]>=0.34.0",
]

[project.urls]
Homepage = "https://github.com/SPHINX998/mail-bridge"
Repository = "https://github.com/SPHINX998/mail-bridge"
Issues = "https://github.com/SPHINX998/mail-bridge/issues"
Releases = "https://github.com/SPHINX998/mail-bridge/releases"

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["mail_bridge*"]

[tool.setuptools]
license-files = ["LICENSE"]
